--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "react": "19.1.0",
