--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "isomorphic-dompurify": "^2.26.0",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-player": "^3.3.1",
