--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-player": "^3.3.1",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
